Fix dispute webhook field

--- a/content/payments/billpay/api-integration/webhook.mdx
+++ b/content/payments/billpay/api-integration/webhook.mdx
@@ -184,8 +184,8 @@ URL    : To be provided by partner`}</CodeBlockWithCopy>
     "event": "BILL_DISPUTE",
     "data": {
         "refId": "JPMRPBOGGDTP1EFRZVXVESQVQIS10461642",
-        "complaintId": "OP0121046567755",
-        "status": "PROCESSING / OPEN / CLOSED",
+        "disputeId": "OP0121046567755",
+        "status": "INITIALIZED/ASSIGNED/RE_ASSIGNED/ASSIGNED_TO_BOU/ASSIGNED_TO_COU/ASSIGNED_TO_OU/ESCALATED/RESOLVED/UNRESOLVED",
         "assignedTo": "AX39",
         "remarks": "Resolved in favour of customer"
     },
