Update notification config

--- a/content/payments/umap/notifications/verify-signature.mdx
+++ b/content/payments/umap/notifications/verify-signature.mdx
@@ -17,9 +17,13 @@ Setu generates a signature using the [Hash-based Message Authentication Code (HM
 
 This HMAC becomes the signature of the webhook, which is then used to authenticate the webhook and verify its payload.
 
-Setu will create a unique secret key for your webhook endpoint and is shared between both the webhook producer (Setu) and consumer (you).
+You need to create a unique secret key for your webhook endpoint and this is shared between both the webhook producer (Setu) and consumer (you).
 
-This secret usually is a alpha-numeric string and its length can vary between 20 to 50 characters. You can use [this webpage](https://www.gigacalculator.com/randomizers/random-alphanumeric-generator.php) to generate a unique secret.
+This secret usually is a alpha-numeric string and its length can vary between 20 to 50 characters. You can use [this page](https://1password.com/password-generator/) to generate a unique secret.
+
+<Callout type="tip">Do not use symbols in your secret</Callout>
+
+<br />
 
 ### Verify the signature
 
